--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,195 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/login_background_color">
+    android:background="@color/login_signup_background_color">
 
-    <ImageView
-        android:id="@+id/login_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:tint="@color/white"
-        android:src="@drawable/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/login_email_id_layout"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="50dp"
-        android:padding="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_logo">
+        android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/login_logo"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_account_box_black_24dp"
-            android:tint="@color/login_text_color"/>
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="48dp"
+            android:tint="@color/white"
+            android:src="@drawable/logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/login_email_text_input_layout"
+        <LinearLayout
+            android:id="@+id/login_email_id_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/login_text_color"
-            android:textColorHint="@color/login_text_color">
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/email_id"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="50dp"
+            android:padding="5dp"
+            android:focusableInTouchMode="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/login_logo">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_account_box_black_24dp"
+                android:tint="@color/login_signup_text_color"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/login_email_text_input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:hint="@string/email_hint"
-                android:backgroundTint="@color/login_background_color"
-                android:textColorHint="@color/login_background_color"
-                android:textSize="14dp"
-                android:textColor="@color/white"
-                android:maxLines="1"
-                android:inputType="textEmailAddress"
-                android:textCursorDrawable="@null"/>
-        </android.support.design.widget.TextInputLayout>
+                android:backgroundTint="@color/login_signup_text_color"
+                android:textColorHint="@color/login_signup_text_color">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/email_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email_hint"
+                    android:backgroundTint="@color/login_signup_background_color"
+                    android:textColorHint="@color/login_signup_background_color"
+                    android:textSize="14dp"
+                    android:textColor="@color/white"
+                    android:maxLines="1"
+                    android:inputType="textEmailAddress"
+                    android:textCursorDrawable="@null"/>
+            </android.support.design.widget.TextInputLayout>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/login_password_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:padding="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_email_id_layout">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_password_black_24dp"
-            android:tint="@color/login_text_color"/>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/login_password_text_input_layout"
+        <LinearLayout
+            android:id="@+id/login_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/login_text_color"
-            android:textColorHint="@color/login_text_color"
-            app:passwordToggleEnabled="true">
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/password"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/login_email_id_layout">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_password_black_24dp"
+                android:tint="@color/login_signup_text_color"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/login_password_text_input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:hint="@string/password_hint"
-                android:inputType="textPassword"
-                android:backgroundTint="@color/login_background_color"
-                android:textColor="@color/white"
-                android:textSize="14dp"
-                android:maxLines="1"
-                app:passwordToggleTint="@color/login_text_color"
-                android:textCursorDrawable="@null"/>
-        </android.support.design.widget.TextInputLayout>
+                android:backgroundTint="@color/login_signup_text_color"
+                android:textColorHint="@color/login_signup_text_color"
+                app:passwordToggleEnabled="true">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password_hint"
+                    android:inputType="textPassword"
+                    android:backgroundTint="@color/login_signup_background_color"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:maxLines="1"
+                    app:passwordToggleTint="@color/login_signup_text_color"
+                    android:textCursorDrawable="@null"/>
+            </android.support.design.widget.TextInputLayout>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/login_button"
-        android:textSize="14sp"
-        android:elevation="10sp"
-        android:textColor="@color/black"
-        style="@style/Widget.AppCompat.Button.Colored"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="40dp"
+            android:text="@string/login_button"
+            android:textSize="14sp"
+            android:elevation="10sp"
+            android:textColor="@color/black"
+            android:background="@drawable/button_ripple_effect"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@color/login_text_color"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/login_or"
-        app:layout_constraintTop_toTopOf="@id/login_or"
-        app:layout_constraintBottom_toBottomOf="@id/login_or">
-    </View>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="@color/login_signup_text_color"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/login_or"
+            app:layout_constraintTop_toTopOf="@id/login_or"
+            app:layout_constraintBottom_toBottomOf="@id/login_or">
+        </View>
 
-    <TextView
-        android:id="@+id/login_or"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/or"
-        android:textColor="@color/login_text_color"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
-        app:layout_constraintBottom_toTopOf="@id/no_account_textview"/>
+        <TextView
+            android:id="@+id/login_or"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/or"
+            android:textColor="@color/login_signup_text_color"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/login_button"
+            app:layout_constraintBottom_toTopOf="@id/no_account_textview"/>
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@color/login_text_color"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintLeft_toRightOf="@id/login_or"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/login_or"
-        app:layout_constraintBottom_toBottomOf="@id/login_or">
-    </View>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="@color/login_signup_text_color"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="40dp"
+            app:layout_constraintLeft_toRightOf="@id/login_or"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/login_or"
+            app:layout_constraintBottom_toBottomOf="@id/login_or">
+        </View>
 
-    <TextView
-        android:id="@+id/no_account_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="15dp"
-        android:text="@string/no_account_text"
-        android:textColor="@color/login_text_color"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/register_button" />
+        <TextView
+            android:id="@+id/no_account_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/no_account_text"
+            android:textColor="@color/login_signup_text_color"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/login_or" />
 
-    <Button
-        android:id="@+id/register_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="30dp"
-        android:paddingLeft="32sp"
-        android:paddingRight="32dp"
-        android:text="@string/register_button"
-        android:textSize="14sp"
-        android:elevation="0dp"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <Button
+            android:id="@+id/register_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="30dp"
+            android:paddingLeft="32sp"
+            android:paddingRight="32dp"
+            android:text="@string/register_button"
+            android:textSize="14sp"
+            android:elevation="0dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/no_account_textview"/>
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
