--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="theme_light">#FAFAFA</color>
     <color name="login_text_color">#5D616A</color>
     <color name="login_background_color">#2E333B</color>
+    <color name="login_signup_text_color">#5D616A</color>
+    <color name="login_signup_background_color">#2E333B</color>
     <color name="settings_horizonatal_line">#ababab</color>
     <color name="grey">#666666</color>
 
