--- a/app/src/main/res/layout-v21/recycler_section_header_top.xml
+++ b/app/src/main/res/layout-v21/recycler_section_header_top.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:cardElevation="4dp">
-
+    android:layout_height="35dp"
+    android:orientation="vertical"
+    android:layout_marginTop="60dp"
+    android:background="@color/theme_light"
+    android:elevation="4dp">
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/date_text"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="5dp"
-        android:background="@color/colorPrimary"
-        android:paddingLeft="30dp"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:background="@color/theme_light"
+        android:paddingLeft="8dp"
+        android:textColor="@color/grey"
+        android:textSize="14sp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/grey"
+
         />
-</android.support.v7.widget.CardView>
+
+</LinearLayout>
 
 
