--- a/app/src/main/res/layout/recycler_section_header.xml
+++ b/app/src/main/res/layout/recycler_section_header.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="30dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+    <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/date_text"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:paddingTop="5dp"
-        android:background="@color/theme_light"
-        android:paddingLeft="30dp"
+        android:paddingTop="12dp"
+        android:background="#80FAFAFA"
+        android:paddingLeft="8dp"
         android:textColor="@color/grey"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_height="0.5dp"
+        android:background="@color/grey"
+        />
+
+</LinearLayout>
 
 
